--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,30 @@
 asgiref==3.7.2
 blinker==1.6.2
+certifi==2023.7.22
+charset-normalizer==3.3.0
 click==8.1.6
 colorama==0.4.6
 crispy-bootstrap4==2022.1
 Django==4.2.3
 django-crispy-forms==2.0
+django-request==1.6.3
+django-requests==0.0.2
+django-widget-tweaks==1.5.0
 Flask==2.3.2
+gunicorn==21.2.0
+idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+packaging==23.1
 Pillow==10.0.0
+psycopg2==2.9.6
+python-dateutil==2.8.2
+requests==2.31.0
+six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.7.1
 tzdata==2023.3
+urllib3==2.0.7
 Werkzeug==2.3.6
+whitenoise==6.5.0
